--- a/public/patterns.html
+++ b/public/patterns.html
@@ -221,7 +221,8 @@
         
 </div> <!-- container -->
 <script>
-  var myApp = angular.module('myApp', ['firebase','chart.js', 'angulartics', 'angulartics.google.analytics']);
+  var myApp = angular.module('myApp', ['firebase','chart.js']);
+  myApp = angular.module('myApp', ['angulartics', 'angulartics.google.analytics']);
   myApp.controller('userController', ['$scope', '$firebase',
     function($scope, $firebase) {
     $scope.newuser = {};
